nullmailer (1:2.0-1) unstable; urgency=medium

  * New upstream version
  * New maintainer
  * Bug fix: "New upstream version (2.0) resolves various bugs", thanks to
    David R. Hedges (Closes: #826026).
  * Bug fix: "nullmailer ignores permanent SMTP errors", thanks to Roy
    Hills (Closes: #329192).
  * Drop support for sysvinit, due to dropping --daemon divergence from upstream

 -- David Bremner <bremner@debian.org>  Sun, 17 Sep 2017 22:00:16 -0300

nullmailer (1:1.13-1.2) unstable; urgency=medium

  * Non-maintainer upload.
  * Do not keep relayhost data in debconf database longer than
    strictly needed. (Closes: #831813)

 -- Christian Hofstaedtler <zeha@debian.org>  Sun, 31 Jul 2016 20:57:13 +0000

nullmailer (1:1.13-1.1) unstable; urgency=medium

  * Non-maintainer upload.

  [ Alexis Bienvenüe ]
  * Deterministic file order in archives. (Closes: #820661)

  [ Christian Hofstaedtler ]
  * Bump Standards-Version to 3.9.8.
  * Add native systemd units, based on initial patch supplied
    by Viktar Vauchkevich. (Closes: #760041)

 -- Christian Hofstaedtler <zeha@debian.org>  Wed, 13 Jul 2016 01:15:46 +0200

nullmailer (1:1.13-1) unstable; urgency=low

  * Ack NMU, thankyou for your help with this package.
  * New upstream release (Closes: #757221, LP: #236715 by adding back-off).
  * Remove patch 07_sendquit.diff as nullmailer now does this itself.
  * B-D on automake and dh-autoreconf rather than automake1.11 and
    autotools-dev (new patch 13_fix_automake.diff).
  * B-D on libgnutls28-dev (Closes: #752308) | libgnutls-dev
  * Use pidofproc -p $PIDFILE in our initscript rather than just pidof
    (Closes: #687827, thanks to Lorenz Schori for the fix).
  * Update Standards-Version to 3.9.5 (no changes required).
  * Add documentation for the smtp, qmqp and smtpd modules (Closes: #682800).

 -- Nick Leverton <nick@leverton.org>  Thu, 07 Aug 2014 22:57:59 +0100

nullmailer (1:1.11-2.1) unstable; urgency=medium

  * Non-maintainer upload.