@@ -5,7 +5,6 @@ Maintainer: David Bremner <bremner@debian.org>
 Build-Depends: autoconf,
                automake,
                debhelper (>= 10.8),
-               dh-autoreconf,
                libgnutls28-dev | libgnutls-dev,
                po-debconf,
 	       daemontools,
