@@ -13,7 +13,7 @@ export DEB_LDFLAGS_MAINT_APPEND += -Wl,-z,defs -Wl,--as-needed
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 %:
-	dh $@ --with autoreconf --with systemd
+	dh $@
 
 override_dh_prep:
 	dh_prep
@@ -33,6 +33,10 @@ override_dh_auto_install:
 # mutter, I thought dh_installchangelogs Did The Right Thing with GNU-style NEWS changelogs
 override_dh_installchangelogs:
 	dh_installchangelogs -k NEWS
+
+# ensure smooth upgrade from previous stop / start style maintscripts
+override_dh_systemd_start:
+	dh_systemd_start --no-restart-after-upgrade
 
 override_dh_fixperms:
 	dh_fixperms
